# insighttrail

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  TEST.md  pyproject.toml
.github/workflows/: prerelease.yml  release.yml  test.yml
docs/: index.html
insighttrail/: __init__.py  fastapi_adapter.py  logger.py  middleware.py  storage.py  traces.py
insighttrail/templates/: insighttrail_dashboard.html
tests/: conftest.py  test_fastapi_adapter.py  test_insighttrail.py  test_logger.py  test_metrics.py  test_middleware.py  test_storage.py
